  was added.



3.0.3: (released 2015-??-??)
----------------------------

All:

- Fix wxFileName::MakeRelativeTo() for directory relatively to itself.

Unix:

- Fix wxIPaddress::Hostname() failing if /etc/hosts contained very long names.
- Fix wxDateTime::ParseRfc822Date() for some TZ/DST combinations.

All (GUI):

- Fix hang when deleting columns from wxTreeListCtrl.
- Allow using Ctrl-dragging to add to selection in wxGrid (Knut Petter Lehre).
- Fix several floating point rounding bugs in wxPropertyGrid (Artur Wieczorek).
- Restore support for wxFD_OVERWRITE_PROMPT and wxFD_FILE_MUST_EXIST in
  wxGenericFileDialog which was accidentally lost some time ago (Carl Godkin).
- Fix handling of fast consecutive clicks in wxRibbonBar (atobi).
- Fix updating nested window scrollbars in some cases (sbrowne).
- Fix wxPGChoices copy ctor (Snoits).
- Fix wxPixelData<wxImage>::Offset() for alpha (Markus Rollmann).
- Fix bug in wxImage::ClearAlpha() for shared data (Markus Rollmann).
- Accept wxALIGN_CENTRE_HORIZONTAL in wxStaticText XRC handler (David Hart).
- Fix appearance after updating a wxGrid with hidden rows/columns (iwbnwif).

wxGTK:

- Fix infinite sizing loop with GTK3 when using wxScrolled with a non-default
  target window.
- Fix crashes in wxGTK3 when running with non-X11 backend (Marco Trevisan).
- Fix coordinates of wxSetCursorEvent propagated to parent windows.
- Fix GTK+ warnings when refreshing wxListCtrl items (Scott Talbert).
- Fix using wxHTTP and wxFTP from worker thread.

wxMSW:

- Fix compilation with g++ 4.9 in non-C++11 mode.
- Fix regression in accessibility support (Leland Lucius).
- Fix regression in wxDC drawing with bottom-to-top y axis (Artur Wieczorek).
- Fix compilation with C++Builder XE compiler (Nichka).
- Fix best height of wxSlider with labels but without ticks (Artur Wieczorek).
- Fix initial text value of wxSpinCtrlDouble (Laurent Poujoulat).
- Fix best size calculation for bitmaps with buttons (Artur Wieczorek).